--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,7 @@ composer.phar
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+.idea
 
 # User-specific stuff:
 .idea/**/workspace.xml
