--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,7 @@ composer.phar
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 .idea
-.idea/*.*
+.idea/
 
 # User-specific stuff:
 .idea/**/workspace.xml
@@ -118,3 +118,4 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+/resources/assets/sass/css/
