Added open weather map api key to .env and registered with services.php

--- a/.env
+++ b/.env
@@ -34,3 +34,5 @@ PUSHER_APP_SECRET=
 
 STRIPE_KEY=pk_test_45bFYx1c1BgeopnQ8LeKLfPw
 STRIPE_SECRET=sk_test_vsiUegVYyqkrHTeQIw3nw151
+
+WEATHER_API_KEY=c81421725e4d3deeda6caee9d1a71f3f
